# pdfree

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  konjo-gate.yml  konjo-gates.yml
.konjo/: deny.toml  profile.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/ios/: project.yml
apps/ios/Frameworks/PdfreeFFI.xcframework/: Info.plist
apps/ios/Frameworks/PdfreeFFI.xcframework/ios-arm64-simulator/Headers/: module.modulemap
apps/ios/Frameworks/PdfreeFFI.xcframework/ios-arm64/Headers/: pdfree_ffiFFI.h
apps/ios/PDFree.xcodeproj/: project.pbxproj
apps/ios/Sources/Bridge/: pdfree_ffi.swift
apps/ios/Sources/PDFree/: ContentView.swift  PDFreeApp.swift
apps/macos/: project.yml
apps/macos/Sources/PDFree/: ContentView.swift  PDFreeApp.swift  Theme.swift
apps/macos/Sources/PDFree/Models/: PDFDocumentStore.swift  SavedSignature.swift  TextFit.swift  Tool.swift
apps/macos/Sources/PDFree/Views/: AIPanel.swift  AddMenuPopover.swift  AnnotationToolbar.swift  ContinuousScrollView.swift  EmptyStateView.swift  ExtractedTextSheet.swift  FormsPanel.swift  InspectorView.swift  OutlineTreeView.swift  PageCanvasView.swift  PagesSidebarView.swift  PasswordExportSheet.swift  ScrollPageFlipper.swift  SearchBar.swift  SignPopover.swift  SignatureSheet.swift  SplitSheet.swift  TextPromptSheet.swift
apps/macos/Tests/: ContinuousScrollViewTests.swift  EncryptExportTests.swift  ExtractDocumentTextTests.swift  OutlineTests.swift  PDFDocumentStoreTests.swift  PageViewModeTests.swift  PrintSupportTests.swift  SearchTests.swift  ShapeAnnotationTests.swift  TextFitTests.swift  UndoRedoTests.swift
apps/macos/UITests/: PDFreeUITests.swift
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/public/pdfium/: README.md
apps/web/src/: App.tsx  theme.css  types.ts
apps/web/src/components/: EmptyState.tsx  Inspector.tsx  PageCanvas.tsx  SignaturePad.tsx
apps/web/src/hooks/: usePdfDocumentStore.ts
apps/web/src/lib/: engine.ts  pdfium.ts  runtime.ts  textFit.ts
crates/pdfree-ai/: Cargo.toml
crates/pdfree-ai/src/: classify.rs  confidence.rs  diff.rs  extract.rs  formfill.rs  json_util.rs  lib.rs  ocr.rs  provider.rs  rag.rs  redact.rs  schema_extract.rs  summarize.rs
crates/pdfree-core/: Cargo.toml
crates/pdfree-core/examples/: accuracy_report.rs
crates/pdfree-core/src/: annotations.rs  bookmarks.rs  boxes.rs  convert.rs  document.rs  editor.rs  encrypt.rs  error.rs  fields.rs  forms.rs  lib.rs  pages.rs  pageview.rs  pdfium.rs  renderer.rs  search.rs  signatures.rs
crates/pdfree-core/tests/: annotations.rs  bookmarks.rs  boxes.rs  convert.rs  editor.rs  encrypt.rs  fields.rs  forms.rs  pages.rs  pageview.rs  render.rs  search.rs  signatures.rs
crates/pdfree-ffi/: Cargo.toml
crates/pdfree-ffi/src/: lib.rs  pdfree.udl
crates/pdfree-wasm/: Cargo.toml
crates/pdfree-wasm/src/: lib.rs
design_handoff_swiftui_redesign/: CLAUDE_CODE_PROMPT.md  README.md
design_handoff_swiftui_redesign/designs/: FormPage.dc.html  pdFree UI Options.dc.html
docs/: ai-design.md  api.md  architecture.md  kiban-investigation-handoff.md  pdfium-bundling.md  phase4-macos-handoff.md  ui-design-handoff.md  windows-build.md
scripts/: build-all.sh  build-ios.sh  build-macos.sh  build-wasm.sh  fetch-pdfium.sh  fetch-test-corpus.sh
tests/corpus/: manifest.tsv
