[package]
name = "pdfree-ai"
description = "PDFree AI/ML layer — provider-agnostic, local-first, cloud-optional."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pdfree-core = { path = "../pdfree-core" }
thiserror.workspace = true
log.workspace = true
