[package]
name = "pdfree-wasm"
description = "PDFree WebAssembly bindings — pdfree-core for the browser via wasm-bindgen."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pdfree-core = { path = "../pdfree-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# NOTE: a real wasm32 build additionally needs a JS-side PDFium WASM module —
# `pdfium-render` auto-switches to its WASM binding backend when compiling
# for `target_arch = "wasm32"` (no separate Cargo feature to enable), but at
# *runtime* JavaScript must call its exported `initialize_pdfium_render()`
# before any function in this crate that touches a document. See
# `docs/pdfium-bundling.md` for the web app's exact setup. On native targets
# this crate still compiles (used by `cargo build --workspace` and CI), but
# nothing calls it there — the web app is the only real consumer.
