[package]
name = "pdfree-desktop"
description = "PDFree Tauri desktop shell — reuses apps/web's React UI natively on Windows/Linux."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "pdfree_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
pdfree-core = { path = "../../../crates/pdfree-core" }
serde_json.workspace = true
serde.workspace = true
log.workspace = true
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
